[package]
name = "reslab-user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
argon2 = "0.6.0-pre.1"
jsonwebtoken = "9.3.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
rand_core = "0.6.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
dotenv = "0.15"